fix: overflowing text in card header

--- a/components/card/card.component.scss
+++ b/components/card/card.component.scss
@@ -107,6 +107,9 @@
       height: $titleHeight;
       padding-top: 15px;
       position: relative;
+      .mat-card-header-text {
+        width: calc(100% - 32px);
+      }
       .cancel {
         position: absolute;
         right: 0;
